# linux-app-dev

./: LICENSE  README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  const.c  const.h  fun.c  fun.h  prog-a  prog-a.param1.out  prog-so  prog-so.out  prog-so.param3.out  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  expected1.txt  expected2.txt  range.c  script1.gdb  script2.gdb
05_Regexps/: Makefile  esub  esub.c
06_Tracing/: Makefile  move.c  unlink_intercept.c
07_Environmental/: Makefile.am  configure.ac  rhasher.c  test_rhasher.sh
08_l18n/: configure.ac
08_l18n/po/: Makevars  ru.mo  ru.po
08_l18n/src/: guess.c
09_PatchDiff/: Makefile  maze  maze.c  maze1  maze2  maze3  maze_v1.c  maze_v2.c  maze_v3.c  patch1.patch  patch2.patch  patch3.patch
10_LibTesting/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  configure~  libtool  test_buf
10_LibTesting/autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.3  traces.4
10_LibTesting/src/: Makefile  Makefile.am  Makefile.in  buf.c  buf.h
10_LibTesting/src/.deps/: libgrowable_buf_la-buf.Tpo
10_LibTesting/tests/: Makefile  Makefile.am  Makefile.in  check_buf.c  simple_test.c
11_Documenting/po/: guess-game.pot
11_Documenting/src/: Makefile
12_InstallPackaging/: Doxyfile.in  Makefile.am  README.md  configure.ac
12_InstallPackaging/lib/: Makefile.am  logingen.c  logingen.h
12_InstallPackaging/manual/: Makefile.am  login-gen.1
12_InstallPackaging/po/: ru.po
12_InstallPackaging/src/: Makefile.am  main.c
12_InstallPackaging/tests/: Makefile.am  test_logingen.c
